Parser system added. Zero-point bug fixed.

--- a/Graph/Graph/Graph.csproj
+++ b/Graph/Graph/Graph.csproj
@@ -110,6 +110,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Downloads\SimpleMathParser v1.0\SimpleMathParser v1.0\Parser\Parser.csproj">
+      <Project>{B66BEACE-2567-4077-9DCB-4358AEE68C90}</Project>
+      <Name>Parser</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AnalyzerInterface\AnalyzerInterface.vcxproj">
       <Project>{3A24E1FF-92BC-4445-833C-FB8962806860}</Project>
       <Name>AnalyzerInterface</Name>
